fix vehicle-lookup bug, wrap page-specific sass with app namespace

--- a/app/assets/scss/custom/_page-specific.scss
+++ b/app/assets/scss/custom/_page-specific.scss
@@ -1,143 +1,152 @@
 //Page specific
 
-//enter address manually
-.enter-address-manually {
-    label {
-        @include sr-only;
-    }
-    .post-town label {
-        position:relative;
-        top:0;
-        left:0;
-        .ie7 & {
-            width:100%;
+#{$htmlNamespace} {
+
+    //enter address manually
+    .enter-address-manually {
+        label {
+            @include sr-only;
         }
-    }
-}
-
-//vehicle lookup/enter vehicle details
-.vehicle-lookup {
-    .first-col .form-steps {
-        margin-top:0;
-
-        .button-secondary {
-          color:$black-2; //failsafe for ie6
+        .post-town label {
+            position:relative;
+            top:0;
+            left:0;
+            .ie7 & {
+                width:100%;
+            }
         }
     }
 
-    .trader-details {
-        .summary-detail-list {
-            margin-bottom:38px;
-            margin-bottom:3.75rem;
+    //vehicle lookup/enter vehicle details
+    .vehicle-lookup {
+        .first-col {
             @media screen and (max-width:$device-medium) {
-                margin-bottom:20px;
-                margin-bottom:2rem;
+                margin:0;
             }
         }
-        dd {
-            .ie6 & {
-                clear:both;
+        .second-col p {
+            margin-top:0;
+
+            .button-secondary {
+              color:$black-2; //failsafe for ie6
+            }
+        }
+
+        .trader-details {
+            .summary-detail-list {
+                margin-bottom:38px;
+                margin-bottom:3.75rem;
+                @media screen and (max-width:$device-medium) {
+                    margin-bottom:20px;
+                    margin-bottom:2rem;
+                }
+            }
+            dd {
+                .ie6 & {
+                    clear:both;
+                }
+            }
+        }
+        .img-wrap img {
+            .ie8 & {
+                max-height:200px; //failsafe to ensure that the correct height is rendered in ie8
             }
         }
     }
-    .img-wrap img {
-        .ie8 & {
-            max-height:200px; //failsafe to ensure that the correct height is rendered in ie8
+
+    //disposal
+    .disposal-date {
+        legend {
+            margin-top:20px;
+            padding-bottom:0.5em;
         }
-    }
-}
+        .todays-date {
+            margin-bottom:10px;
+            margin-bottom:1rem;
 
-//disposal
-.disposal-date {
-    legend {
-        margin-top:20px;
-        padding-bottom:0.5em;
-    }
-    .todays-date {
-        margin-bottom:10px;
-        margin-bottom:1rem;
+            @media screen and (max-width:$device-medium) {
+                margin-bottom:12px;
+                margin-bottom:1.25rem;
+            }
 
-        @media screen and (max-width:$device-medium) {
-            margin-bottom:12px;
-            margin-bottom:1.25rem;
-        }
-
-        button {
-            -webkit-appearance:none;
-            border:0 none;
-            padding:0;
-            font-size:0.9em;
-            background:none;
-            color:$govuk-blue;
-            cursor:pointer;
-            @include box-shadow(none);
-            &:hover,
-            &:active {
+            button {
+                -webkit-appearance:none;
+                border:0 none;
+                padding:0;
+                font-size:0.9em;
                 background:none;
                 color:$govuk-blue;
-                text-decoration:underline;
-            }
-            
-            &:focus {
-              overflow:hidden; //prevents overlapping bug in Firefox
-            }
+                cursor:pointer;
+                @include box-shadow(none);
+                &:hover,
+                &:active {
+                    background:none;
+                    color:$govuk-blue;
+                    text-decoration:underline;
+                }
+                
+                &:focus {
+                  overflow:hidden; //prevents overlapping bug in Firefox
+                }
 
-            .ie & {
-              font-size:15px;
+                .ie & {
+                  font-size:15px;
+                }
+                .ie8 &,
+                .ie7 & {
+                  padding-right:0;
+                  padding-left:0;
+                }
+                @media screen and (max-width:$device-medium) {
+                  padding:0.6em 0;
+                  margin-top:0;
+                }
             }
-            .ie8 &,
-            .ie7 & {
-              padding-right:0;
-              padding-left:0;
-            }
-            @media screen and (max-width:$device-medium) {
-              padding:0.6em 0;
-              margin-top:0;
+        }
+        .form-date {
+          clear:both;
+        }
+        .ie6 & {
+            .form-date .form-item {
+                float:left;
             }
         }
     }
-    .form-date {
-      clear:both;
+
+
+    //disposal success
+    .disposal-sucesss {
+      .ie8 & .button-new-disposal {
+          min-width:180px;
+      }
     }
-    .ie6 & {
-        .form-date .form-item {
-            float:left;
+
+    ul.radio {
+        margin-left: 0;
+        padding: 0;
+        input, label {
+            display:inline;
         }
     }
-}
 
-
-//disposal success
-.disposal-sucesss {
-  .ie8 & .button-new-disposal {
-      min-width:180px;
-  }
-}
-
-ul.radio {
-    margin-left: 0;
-    padding: 0;
-    input, label {
-        display:inline;
+    dd.regNum {
+        display: inline-block;
+        text-align: center;
+        line-height: 1.25;
+        padding-right: 0.25em;
+        padding-left: 0.25em;
+        background-color: #ffd307;
+        border: 1px solid #999;
+        padding: 0.2em 0.5em 0.1em 0.5em;
+        font-weight: 700;
+        font-size: 120%;
+        border-radius: 5px;
     }
-}
 
-dd.regNum {
-    display: inline-block;
-    text-align: center;
-    line-height: 1.25;
-    padding-right: 0.25em;
-    padding-left: 0.25em;
-    background-color: #ffd307;
-    border: 1px solid #999;
-    padding: 0.2em 0.5em 0.1em 0.5em;
-    font-weight: 700;
-    font-size: 120%;
-    border-radius: 5px;
-}
+    a.pdfLink img {
+        max-height: 40px;
+        float: left;
+        padding-right: 10px;
+    }
 
-a.pdfLink img {
-    max-height: 40px;
-    float: left;
-    padding-right: 10px;
 }
